# cargo-bloat

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml  test.yml
src/: ar.rs  crate_name.rs  elf32.rs  elf64.rs  macho.rs  main.rs  parser.rs  pe.rs  table.rs
src/demangle/: legacy.rs  mod.rs  v0.rs
