[package]
name = "cargo-bloat"
version = "0.10.0"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
description = "Find out what takes most of the space in your executable."
categories = ["development-tools::cargo-plugins"]
repository = "https://github.com/RazrFalcon/cargo-bloat"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
json = "0.12"
memmap2 = "0.1"
multimap = { version = "0.8", default-features = false }
pico-args = "0.3"
term_size = "0.3.1"
binfarce = "0.2.0"

[dependencies.regex]
version = "1.3"
optional = true
default-features = false
features = ["std"]

[features]
default = ["regex"]
regex-filter = ["regex"]
